--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,10 @@
 @import "fonts";
 @import "global";
 @import "sprite";
+@import "animations";
 @import "components/header";
 @import "components/bar";
 @import "components/content";
+@import "components/slider";
+@import "components/news";
 @import "components/footer";
