--- a/src/templates/components/_header.html
+++ b/src/templates/components/_header.html
@@ -2,9 +2,7 @@
   <div class="header-top">
     <div class="container">
       <div class="header-top__inner">
-        <svg class="star" style="max-width: 60px; max-height: 60px">
-          <use xlink:href="images/sprite.svg#star"></use>
-        </svg>
+        <img src="images/star.png" alt="Орден" class="star" style="width: 60px; height: 60px;" />
 
         <p class="header-top__content">
           [ХВВАУЛ-74] Харьковское Высшее Военное Авиационное ордена Красной Звезды Училище Лётчиков ВВС им. дважды Героя Советского Союза С.И. Грицевца
@@ -22,6 +20,8 @@
           </h1>
 
           <span class="header__subtitle"> Сайт выпускников 1974 года </span>
+
+          <!-- <img src="images/Mig.svg" alt="." class="header__icon"> -->
         </div>
 
         <nav class="menu">
