--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Сайт выпускников ХВВАУЛ 1974 года выпуска, ХВВАУЛ-74, Взлёт.ру, v3let.ru, лучший сайт авиации" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico">
 
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -14,8 +15,9 @@
   <body>
     <div class="wrapper">
       @@loop('templates/components/_header.html',[{ "title":"header title" }])
-      <main class="main">
+      <main class="main" data-aos="slide-up">
         <div class="container">
+          <!-- Поиск и ссылки для связи. -->
           <div class="bar">
             <dvi class="social">
               <!-- <span class="social_text">Свяжитесь со мной:</span> -->
@@ -57,7 +59,10 @@
             </div>
           </div>
 
+          <!-- Истории. -->
           <section class="content">
+            <h2 class="title">Самое важное!</h2>
+
             <div class="content__inner">
               <article class="content__item">
                 <a href="#" class="content__link"></a>
@@ -66,7 +71,7 @@
                   <img src="images/content/1.jpg" alt="Изображение статьи" class="content__img" />
                 </div>
 
-                <h2 class="content__title">ЛЕЙТЕНАНТСКИЕ ГОДЫ</h2>
+                <h3 class="content__title">ЛЕЙТЕНАНТСКИЕ ГОДЫ</h3>
 
                 <p class="content__text">
                   Зима 1975 года. Я – лейтенант только-только после училища начинаю осваивать науку побеждать в воздухе. Меня усиленно готовят на квалификацию «Военный лётчик 3го
@@ -84,7 +89,7 @@
                   <img src="images/content/2.jpg" alt="Изображение статьи" class="content__img" />
                 </div>
 
-                <h2 class="content__title">«НЕПОДСУДЕН-4»</h2>
+                <h3 class="content__title">«НЕПОДСУДЕН-4»</h3>
 
                 <p class="content__text">
                   Зима 1975 года. Я – лейтенант только-только после училища начинаю осваивать науку побеждать в воздухе. Меня усиленно готовят на квалификацию «Военный лётчик 3го
@@ -102,7 +107,7 @@
                   <img src="images/content/3.jpg" alt="Изображение статьи" class="content__img" />
                 </div>
 
-                <h2 class="content__title">СЛУЖЕБНОЕ ПРЕСТУПЛЕНИЕ</h2>
+                <h3 class="content__title">СЛУЖЕБНОЕ ПРЕСТУПЛЕНИЕ</h3>
 
                 <p class="content__text">
                   Зима 1975 года. Я – лейтенант только-только после училища начинаю осваивать науку побеждать в воздухе. Меня усиленно готовят на квалификацию «Военный лётчик 3го
@@ -120,7 +125,7 @@
                   <img src="images/content/4.jpg" alt="Изображение статьи" class="content__img" />
                 </div>
 
-                <h2 class="content__title">ЛЕЙТЕНАНТСКИЕ ГОДЫ</h2>
+                <h3 class="content__title">ЛЕЙТЕНАНТСКИЕ ГОДЫ</h3>
 
                 <p class="content__text">
                   Зима 1975 года. Я – лейтенант только-только после училища начинаю осваивать науку побеждать в воздухе. Меня усиленно готовят на квалификацию «Военный лётчик 3го
@@ -138,7 +143,7 @@
                   <img src="images/content/5.jpg" alt="Изображение статьи" class="content__img" />
                 </div>
 
-                <h2 class="content__title">ЗАКОНОМЕРНЫЙ ИТОГ</h2>
+                <h3 class="content__title">ЗАКОНОМЕРНЫЙ ИТОГ</h3>
 
                 <p class="content__text">
                   Зима 1975 года. Я – лейтенант только-только после училища начинаю осваивать науку побеждать в воздухе. Меня усиленно готовят на квалификацию «Военный лётчик 3го
@@ -151,7 +156,169 @@
             </div>
           </section>
 
-          <button class="up up--animated">
+          <!-- Слайдер. -->
+          <section class="slider" data-aos="fade-up">
+            <div class="contaner">
+              <h2 class="title">Наши выпускники.</h2>
+            </div>
+            <div class="slider__container">
+              <ul class="slider__list swiper-wrapper">
+                <li class="slider__item swiper-slide">
+                  <a href="#" class="slider__link">
+                    <img src="images/slider/1.jpg" alt="Фото" class="slider__img" />
+                  </a>
+                </li>
+
+                <li class="slider__item swiper-slide">
+                  <a href="#" class="slider__link">
+                    <img src="images/slider/2.jpg" alt="Фото" class="slider__img" />
+                  </a>
+                </li>
+
+                <li class="slider__item swiper-slide">
+                  <a href="#" class="slider__link">
+                    <img src="images/slider/3.jpg" alt="Фото" class="slider__img" />
+                  </a>
+                </li>
+
+                <li class="slider__item swiper-slide">
+                  <a href="#" class="slider__link">
+                    <img src="images/slider/4.jpg" alt="Фото" class="slider__img" />
+                  </a>
+                </li>
+
+                <li class="slider__item swiper-slide">
+                  <a href="#" class="slider__link">
+                    <img src="images/slider/5.jpg" alt="Фото" class="slider__img" />
+                  </a>
+                </li>
+
+                <li class="slider__item swiper-slide">
+                  <a href="#" class="slider__link">
+                    <img src="images/slider/6.jpg" alt="Фото" class="slider__img" />
+                  </a>
+                </li>
+              </ul>
+
+              <div class="slider__pagination swiper-pagination"></div>
+            </div>
+          </section>
+
+          <!-- Новостные каточки -->
+          <section class="news">
+            <div class="container">
+              <h2 class="title">Свежие статьи.</h2>
+
+              <ul class="news__list">
+                <li class="news__item">
+                  <article class="news__element" data-aos="slide-up">
+                    <a href="#" class="news__link"></a>
+                    <img src="images/news/1.jpg" alt="Новостная карточка" class="news__image" />
+
+                    <div class="news__info">
+                      <h3 class="news__title">БУДУЩЕЕ – ЗАВТРА</h3>
+                      <p class="news__text">
+                        «Погиб на 48-м году жизни 17 июля 2001 г. во время показательных выступлений на празднике в честь 85-летия военно-морской авиации в Центре боевой подготовки
+                        и переучивания лётного состава авиации ВМФ под Псковом. Апакидзе, выполнив все фигуры высшего пилотажа, заходил на посадку, когда его самолёт Су-33,
+                        находившийся в нескольких километрах от взлётно-посадочной полосы, «повёл себя неустойчиво». После доклада об этом на пункт управления полётами, лётчику
+                        поступила команда катапультироваться. Однако, Апакидзе решил не катапультироваться и оставался в пилотской кабине до момента удара самолёта о землю и его
+                        взрыва, стремясь сохранить самолёт. Однако, по мнению госкомиссии, Апакидзе погиб «вследствие психофизической перегрузки». Пилот отключил ограничители
+                        предельных углов атаки и перегрузки, чтобы выполнить сложные фигуры пилотажа. В результате во время одного из манёвров он испытал восьмикратную перегрузку и
+                        потерял контроль над машиной»
+                      </p>
+                      <time class="news__date">12.04.2022</time>
+                    </div>
+                  </article>
+                </li>
+
+                <li class="news__item">
+                  <article class="news__element" data-aos="slide-up">
+                    <a href="#" class="news__link"></a>
+                    <img src="images/news/2.jpg" alt="Новостная карточка" class="news__image" />
+
+                    <div class="news__info">
+                      <h3 class="news__title">ЭТО НУЖНО НЕ МЁРТВЫМ, ЭТО НУЖНО ЖИВЫМ!</h3>
+                      <p class="news__text">
+                        «Погиб на 48-м году жизни 17 июля 2001 г. во время показательных выступлений на празднике в честь 85-летия военно-морской авиации в Центре боевой подготовки
+                        и переучивания лётного состава авиации ВМФ под Псковом. Апакидзе, выполнив все фигуры высшего пилотажа, заходил на посадку, когда его самолёт Су-33,
+                        находившийся в нескольких километрах от взлётно-посадочной полосы, «повёл себя неустойчиво». После доклада об этом на пункт управления полётами, лётчику
+                        поступила команда катапультироваться. Однако, Апакидзе решил не катапультироваться и оставался в пилотской кабине до момента удара самолёта о землю и его
+                        взрыва, стремясь сохранить самолёт. Однако, по мнению госкомиссии, Апакидзе погиб «вследствие психофизической перегрузки». Пилот отключил ограничители
+                        предельных углов атаки и перегрузки, чтобы выполнить сложные фигуры пилотажа. В результате во время одного из манёвров он испытал восьмикратную перегрузку и
+                        потерял контроль над машиной»
+                      </p>
+                      <time class="news__date">12.04.2022</time>
+                    </div>
+                  </article>
+                </li>
+
+                <li class="news__item">
+                  <article class="news__element" data-aos="slide-up">
+                    <a href="#" class="news__link"></a>
+                    <img src="images/news/3.jpg" alt="Новостная карточка" class="news__image" />
+
+                    <div class="news__info">
+                      <h3 class="news__title">НЕПЛАНОВАЯ ПОСАДКА</h3>
+                      <p class="news__text">
+                        «Погиб на 48-м году жизни 17 июля 2001 г. во время показательных выступлений на празднике в честь 85-летия военно-морской авиации в Центре боевой подготовки
+                        и переучивания лётного состава авиации ВМФ под Псковом. Апакидзе, выполнив все фигуры высшего пилотажа, заходил на посадку, когда его самолёт Су-33,
+                        находившийся в нескольких километрах от взлётно-посадочной полосы, «повёл себя неустойчиво». После доклада об этом на пункт управления полётами, лётчику
+                        поступила команда катапультироваться. Однако, Апакидзе решил не катапультироваться и оставался в пилотской кабине до момента удара самолёта о землю и его
+                        взрыва, стремясь сохранить самолёт. Однако, по мнению госкомиссии, Апакидзе погиб «вследствие психофизической перегрузки». Пилот отключил ограничители
+                        предельных углов атаки и перегрузки, чтобы выполнить сложные фигуры пилотажа. В результате во время одного из манёвров он испытал восьмикратную перегрузку и
+                        потерял контроль над машиной»
+                      </p>
+                      <time class="news__date">12.04.2022</time>
+                    </div>
+                  </article>
+                </li>
+
+                <li class="news__item">
+                  <article class="news__element" data-aos="slide-up">
+                    <a href="#" class="news__link"></a>
+                    <img src="images/news/4.jpg" alt="Новостная карточка" class="news__image" />
+
+                    <div class="news__info">
+                      <h3 class="news__title">НЛО ПРИЛЕТАЕТ ПО ЧЕТВЕРГАМ</h3>
+                      <p class="news__text">
+                        «Погиб на 48-м году жизни 17 июля 2001 г. во время показательных выступлений на празднике в честь 85-летия военно-морской авиации в Центре боевой подготовки
+                        и переучивания лётного состава авиации ВМФ под Псковом. Апакидзе, выполнив все фигуры высшего пилотажа, заходил на посадку, когда его самолёт Су-33,
+                        находившийся в нескольких километрах от взлётно-посадочной полосы, «повёл себя неустойчиво». После доклада об этом на пункт управления полётами, лётчику
+                        поступила команда катапультироваться. Однако, Апакидзе решил не катапультироваться и оставался в пилотской кабине до момента удара самолёта о землю и его
+                        взрыва, стремясь сохранить самолёт. Однако, по мнению госкомиссии, Апакидзе погиб «вследствие психофизической перегрузки». Пилот отключил ограничители
+                        предельных углов атаки и перегрузки, чтобы выполнить сложные фигуры пилотажа. В результате во время одного из манёвров он испытал восьмикратную перегрузку и
+                        потерял контроль над машиной»
+                      </p>
+                      <time class="news__date">12.04.2022</time>
+                    </div>
+                  </article>
+                </li>
+
+                <li class="news__item">
+                  <article class="news__element">
+                    <a href="#" class="news__link"></a>
+                    <img src="images/news/5.jpg" alt="Новостная карточка" class="news__image" />
+
+                    <div class="news__info">
+                      <h3 class="news__title">ВО ЧТО ВЕРИТ РП</h3>
+                      <p class="news__text">
+                        «Погиб на 48-м году жизни 17 июля 2001 г. во время показательных выступлений на празднике в честь 85-летия военно-морской авиации в Центре боевой подготовки
+                        и переучивания лётного состава авиации ВМФ под Псковом. Апакидзе, выполнив все фигуры высшего пилотажа, заходил на посадку, когда его самолёт Су-33,
+                        находившийся в нескольких километрах от взлётно-посадочной полосы, «повёл себя неустойчиво». После доклада об этом на пункт управления полётами, лётчику
+                        поступила команда катапультироваться. Однако, Апакидзе решил не катапультироваться и оставался в пилотской кабине до момента удара самолёта о землю и его
+                        взрыва, стремясь сохранить самолёт. Однако, по мнению госкомиссии, Апакидзе погиб «вследствие психофизической перегрузки». Пилот отключил ограничители
+                        предельных углов атаки и перегрузки, чтобы выполнить сложные фигуры пилотажа. В результате во время одного из манёвров он испытал восьмикратную перегрузку и
+                        потерял контроль над машиной»
+                      </p>
+                      <time class="news__date">12.04.2022</time>
+                    </div>
+                  </article>
+                </li>
+              </ul>
+            </div>
+          </section>
+
+          <button class="up">
             <svg class="up__icon">
               <use xlink:href="images/sprite.svg#up"></use>
             </svg>
