--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -14,7 +14,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   color: #000;
-  background-color: $bg;
+  background-image: $bg2;
   @extend %pt-400;
 }
 
@@ -35,8 +35,15 @@ body {
   max-width: 1230px;
 }
 
+.title{
+  position: relative;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 h1 {
   font-size: 36px;
+  margin-bottom: -10px;
 }
 
 h2 {
