--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -161,7 +161,7 @@
             <div class="contaner">
               <h2 class="title">Наши выпускники.</h2>
             </div>
-            <div class="slider__container">
+            <div class="slider__container swiper">
               <ul class="slider__list swiper-wrapper">
                 <li class="slider__item swiper-slide">
                   <a href="#" class="slider__link">
@@ -199,8 +199,6 @@
                   </a>
                 </li>
               </ul>
-
-              <div class="slider__pagination swiper-pagination"></div>
             </div>
           </section>
 
