--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -32,13 +32,14 @@ body {
 .container {
   margin: 0 auto;
   padding: 0 15px;
-  max-width: 1230px;
+  max-width: 1330px;
 }
 
 .title{
   position: relative;
   margin-bottom: 20px;
   text-align: center;
+  @include txt($lc: 2);
 }
 
 h1 {
