--- a/src/scss/_libs.scss
+++ b/src/scss/_libs.scss
@@ -1,3 +1,3 @@
 @import "../../node_modules/normalize.css/normalize.css";
 @import "../../node_modules/aos/src/sass/aos.scss";
-@import "../../node_modules/swiper/swiper-bundle";
+@import "../../node_modules/swiper/swiper-bundle.css";
