--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -24,8 +24,8 @@
       grid-column: 1/3;
       grid-row: 1/3;
       padding: 20px;
-      max-width: 570px;
-      max-height: 600px;
+      max-width: 100%;
+      max-height: 100%;
     }
 
     &:first-child .content__img-container {
@@ -33,6 +33,7 @@
     }
 
     &:first-child .content__title {
+      margin-bottom: 15px;
       font-size: 24px;
     }
 
@@ -41,14 +42,11 @@
       height: 360px;
     }
 
-    &:first-child .content__title {
-      margin-bottom: 15px;
-    }
-
     &:first-child .content__text {
       display: block;
-      margin-bottom: 15px;
-      @include txt($lc: 3);
+      margin-bottom: 26px;
+      font-size: 16px;
+      @include txt($lc: 4);
     }
 
     &:hover {
@@ -75,12 +73,15 @@
   }
 
   &__title {
-    flex-grow: 1;
     font-size: 18px;
+    @include txt($lc: 2);
   }
 
   &__text {
-    display: none;
+    flex-grow: 1;
+    margin-bottom: 10px;
+    font-size: 12px;
+    @include txt($lc: 2);
   }
 
   &__date {
