--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,29 +1,21 @@
 .slider {
   margin: 15px 0 45px;
 
-  &__list{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  &__container{
+    margin-left: 10px;
   }
 
   &__item {
-    margin-right: 15px;
-    max-width: 400px;
+    max-width: 230px;
+    max-height: 400px;
     width: auto;
     overflow: hidden;
   }
 
   &__img {
-    // min-width: 100%;
-    max-height: 350px;
+    min-width: 100%;
+    height: 320px;
     margin-right: 10px;
-    object-fit:contain;
-  }
-
-  &__pagination{
-    // display: flex;
-    // width: 6px;
-    // height: 6px;
+    object-fit:cover;
   }
 }
