--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,4 +11,5 @@
 @import "components/content";
 @import "components/slider";
 @import "components/news";
+@import "pages/product";
 @import "components/footer";
