--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -23,21 +23,21 @@
               <!-- <span class="social_text">Свяжитесь со мной:</span> -->
               <ul class="social__list">
                 <li class="social__item">
-                  <a href="#" class="social__link">
+                  <a href="./product.html" target="_blank" class="social__link">
                     <svg class="social__icon">
                       <use xlink:href="images/sprite.svg#odnok"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">
+                  <a href="./product.html" target="_blank" class="social__link">
                     <svg class="social__icon">
                       <use xlink:href="images/sprite.svg#telegram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="social__item">
-                  <a href="#" class="social__link">
+                  <a href="./product.html" target="_blank" class="social__link">
                     <svg class="social__icon">
                       <use xlink:href="images/sprite.svg#email"></use>
                     </svg>
@@ -65,7 +65,7 @@
 
             <div class="content__inner">
               <article class="content__item">
-                <a href="#" class="content__link"></a>
+                <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
                   <img src="images/content/1.jpg" alt="Изображение статьи" class="content__img" />
@@ -83,7 +83,7 @@
               </article>
 
               <article class="content__item">
-                <a href="#" class="content__link"></a>
+                <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
                   <img src="images/content/2.jpg" alt="Изображение статьи" class="content__img" />
@@ -101,7 +101,7 @@
               </article>
 
               <article class="content__item">
-                <a href="#" class="content__link"></a>
+                <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
                   <img src="images/content/3.jpg" alt="Изображение статьи" class="content__img" />
@@ -119,7 +119,7 @@
               </article>
 
               <article class="content__item">
-                <a href="#" class="content__link"></a>
+                <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
                   <img src="images/content/4.jpg" alt="Изображение статьи" class="content__img" />
@@ -137,7 +137,7 @@
               </article>
 
               <article class="content__item">
-                <a href="#" class="content__link"></a>
+                <a href="./product.html" target="_blank" class="content__link"></a>
 
                 <div class="content__img-container">
                   <img src="images/content/5.jpg" alt="Изображение статьи" class="content__img" />
@@ -164,37 +164,37 @@
             <div class="slider__container swiper">
               <ul class="slider__list swiper-wrapper">
                 <li class="slider__item swiper-slide">
-                  <a href="#" class="slider__link">
+                  <a href="./product.html" target="_blank" class="slider__link">
                     <img src="images/slider/1.jpg" alt="Фото" class="slider__img" />
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="#" class="slider__link">
+                  <a href="./product.html" target="_blank" class="slider__link">
                     <img src="images/slider/2.jpg" alt="Фото" class="slider__img" />
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="#" class="slider__link">
+                  <a href="./product.html" target="_blank" class="slider__link">
                     <img src="images/slider/3.jpg" alt="Фото" class="slider__img" />
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="#" class="slider__link">
+                  <a href="./product.html" target="_blank" class="slider__link">
                     <img src="images/slider/4.jpg" alt="Фото" class="slider__img" />
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="#" class="slider__link">
+                  <a href="./product.html" target="_blank" class="slider__link">
                     <img src="images/slider/5.jpg" alt="Фото" class="slider__img" />
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="#" class="slider__link">
+                  <a href="./product.html" target="_blank" class="slider__link">
                     <img src="images/slider/6.jpg" alt="Фото" class="slider__img" />
                   </a>
                 </li>
