feat: add author page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,4 +12,5 @@
 @import "components/slider";
 @import "components/news";
 @import "pages/product";
+@import "pages/author";
 @import "components/footer";
