--- a/src/templates/components/_header.html
+++ b/src/templates/components/_header.html
@@ -42,7 +42,7 @@
               <a href="#" class="menu__link">Творчество</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Юрий Фёдоров</a>
+              <a href="./author.html" class="menu__link">Юрий Фёдоров</a>
             </li>
             <li class="menu__item">
               <a href="#" class="menu__link">Помощь</a>
