--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -210,7 +210,7 @@
               <ul class="news__list">
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
-                    <a href="#" class="news__link"></a>
+                    <a href="./product.html" target="_blank" class="news__link"></a>
                     <img src="images/news/1.jpg" alt="Новостная карточка" class="news__image" />
 
                     <div class="news__info">
@@ -231,7 +231,7 @@
 
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
-                    <a href="#" class="news__link"></a>
+                    <a href="./product.html" target="_blank" class="news__link"></a>
                     <img src="images/news/2.jpg" alt="Новостная карточка" class="news__image" />
 
                     <div class="news__info">
@@ -252,7 +252,7 @@
 
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
-                    <a href="#" class="news__link"></a>
+                    <a href="./product.html" target="_blank" class="news__link"></a>
                     <img src="images/news/3.jpg" alt="Новостная карточка" class="news__image" />
 
                     <div class="news__info">
@@ -273,7 +273,7 @@
 
                 <li class="news__item">
                   <article class="news__element" data-aos="slide-up">
-                    <a href="#" class="news__link"></a>
+                    <a href="./product.html" target="_blank" class="news__link"></a>
                     <img src="images/news/4.jpg" alt="Новостная карточка" class="news__image" />
 
                     <div class="news__info">
@@ -294,7 +294,7 @@
 
                 <li class="news__item">
                   <article class="news__element">
-                    <a href="#" class="news__link"></a>
+                    <a href="./product.html" target="_blank" class="news__link"></a>
                     <img src="images/news/5.jpg" alt="Новостная карточка" class="news__image" />
 
                     <div class="news__info">
