fix: change gitignore

--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -26,8 +26,8 @@
 
   &__image {
     margin-right: 20px;
-    max-width: 400px;
-    max-height: 400px;
+    max-width: 40%;
+    max-height: 100%;
     object-fit: cover;
   }
 
