--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
   margin: 15px 0 45px;
 
-  &__container{
+  &__container {
     margin-left: 10px;
   }
 
@@ -10,12 +10,15 @@
     max-height: 400px;
     width: auto;
     overflow: hidden;
+    @include mq("1024") {
+      max-height: 250px;
+    }
   }
 
   &__img {
     min-width: 100%;
     height: 320px;
     margin-right: 10px;
-    object-fit:cover;
+    object-fit: cover;
   }
 }
