--- a/src/templates/components/_header.html
+++ b/src/templates/components/_header.html
@@ -2,7 +2,7 @@
   <div class="header-top">
     <div class="container">
       <div class="header-top__inner">
-        <img src="images/star.png" alt="Орден" class="star" style="width: 60px; height: 60px;" />
+        <img src="images/star.png" alt="Орден" class="star" style="width: 50px; height: 50px;" />
 
         <p class="header-top__content">
           [ХВВАУЛ-74] Харьковское Высшее Военное Авиационное ордена Красной Звезды Училище Лётчиков ВВС им. дважды Героя Советского Союза С.И. Грицевца
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="header__body">
       <div class="header__inner">
-        <div class="header__about">
+        <div class="header__about" data-aos="fade-left" data-aos-duration="1000">
           <h1 class="header__title">
             <a href="/" class="header__link">Взлёт</a>
           </h1>
@@ -25,13 +25,7 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="#" class="menu__link">Главная</a>
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link">Наш курс</a>
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link">Новости</a>
+              <a href="index.html#slide" class="menu__link">Наш курс</a>
             </li>
             <li class="menu__item">
               <a href="#" class="menu__link">Исторические хроники</a>
