--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -157,45 +157,51 @@
           </section>
 
           <!-- Слайдер. -->
-          <section class="slider" data-aos="fade-up">
+          <section class="slider" id="slide" data-aos="fade-up">
             <div class="contaner">
               <h2 class="title">Наши выпускники.</h2>
             </div>
             <div class="slider__container swiper">
               <ul class="slider__list swiper-wrapper">
                 <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="images/slider/1.jpg" alt="Фото" class="slider__img" />
+                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
+                    <img src="images/slider/1.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="images/slider/2.jpg" alt="Фото" class="slider__img" />
+                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
+                    <img src="images/slider/2.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="images/slider/3.jpg" alt="Фото" class="slider__img" />
+                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
+                    <img src="images/slider/3.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="images/slider/4.jpg" alt="Фото" class="slider__img" />
+                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
+                    <img src="images/slider/4.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="images/slider/5.jpg" alt="Фото" class="slider__img" />
+                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
+                    <img src="images/slider/5.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
 
                 <li class="slider__item swiper-slide">
-                  <a href="./product.html" target="_blank" class="slider__link">
-                    <img src="images/slider/6.jpg" alt="Фото" class="slider__img" />
+                  <a href="./product.html" target="_blank" class="slider__link swiper-zoom-container">
+                    <img src="images/slider/6.jpg" alt="Фото" class="slider__img swiper-lazy" />
+                    <div class="swiper-lazy-preloader"></div>
                   </a>
                 </li>
               </ul>
@@ -203,9 +209,9 @@
           </section>
 
           <!-- Новостные каточки -->
-          <section class="news">
+          <section class="news" data-aos="fade-up">
             <div class="container">
-              <h2 class="title">Свежие статьи.</h2>
+              <h2 class="title" data-aos="fade-up">Свежие статьи.</h2>
 
               <ul class="news__list">
                 <li class="news__item">
