--- a/src/scss/_libs.scss
+++ b/src/scss/_libs.scss
@@ -1,3 +1,5 @@
 @import "../../node_modules/normalize.css/normalize.css";
 @import "../../node_modules/aos/src/sass/aos.scss";
-@import "../../node_modules/swiper/swiper-bundle.css";
+@import "../../node_modules/swiper/swiper.scss";
+@import "../../node_modules/swiper/modules/autoplay/autoplay.scss";
+@import "../../node_modules/swiper/modules/lazy/lazy.scss";
