--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,26 @@
 .header {
+  z-index: 3;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  transition: transform 0.3s linear;
+
+  &.hide {
+    transform: translateY(-160px);
+  }
+
+  &.color {
+    .header__body {
+      box-shadow: 0px 10px 8px 0px rgba(34, 60, 80, 0.4);
+      border-top: 0px;
+    }
+  }
+
   &-top {
+    display: flex;
+    align-items: center;
+    min-height: 60px;
     background-color: $accent;
   }
 
@@ -11,33 +32,38 @@
   &-top__content {
     padding: 15px;
     max-height: 60px;
-    min-width: 90%;
+    min-width: 96%;
     text-align: center;
     color: #ececec;
   }
 
   &__body {
+    border: 4px solid $accent;
     border-radius: 0 0 12px 12px;
     padding: 20px 10px;
     background-color: #fff;
-
     background-image: url("../images/plane.png");
-    background-position: 140px -56px;
+    background-position: 132px -56px;
     background-repeat: no-repeat;
-    background-size: 260px;
+    background-size: 210px;
   }
 
   &__inner {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 100px;
+    height: 50px;
     padding: 20px;
   }
 
   &__link {
     color: $title;
+    transition: color 0.3s;
     cursor: pointer;
+
+    &:hover {
+      color: $accent;
+    }
   }
 
   &__subtitle {
