--- a/src/templates/pages/product.html
+++ b/src/templates/pages/product.html
@@ -17,12 +17,12 @@
       <main class="main">
         <section class="product">
           <div class="container">
-            <article class="product__wrapper">
+            <article class="product__wrapper" data-aos="slide-up" data-aos-duration="1000">
               <div class="product__content">
                 <h2 class="product__title">Добро пожаловать на сайт "Взлет.ру"!</h2>
 
-                <p class="product__text">
-                  <img src="/images/content/2.jpg" alt="Изображение" class="product__img" />
+                <p class="product__text" data-aos="fade-in" data-aos-duration="1000">
+                  <img src="/images/content/2.jpg" alt="Изображение" class="product__img" data-aos="fade-in" data-aos-duration="1000"/>
                   Дорогие друзья! Теперь и у нашего выпуска Харьковского ВВАУЛ 1974 года есть свой сайт. Заходите, регистрируйтесь, смотрите материалы, присылайте свои мысли,
                   воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же, фотографии – то есть всё то, чем вы хотите поделиться со своими однокашниками.
                   Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать как можно больше информации о всех выпускниках ХВВАУЛ,
@@ -30,9 +30,7 @@
                   смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же, фотографии – то есть всё то, чем вы
                   хотите поделиться со своими однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать как можно
                   больше информации о всех выпускниках ХВВАУЛ, сделать информацию полезной и интересной. Дорогие друзья! Теперь и у нашего выпуска Харьковского ВВАУЛ 1974 года есть
-                  свой сайт. Заходите, регистрируйтесь,
-
-                  смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же,
+                  свой сайт. Заходите, регистрируйтесь, смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же,
                   фотографии – то есть всё то, чем вы хотите поделиться со своими однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими
                   пользователями. Цель сайта: собрать как можно больше информации о всех выпускниках ХВВАУЛ, сделать информацию полезной и интересной. Дорогие друзья! Теперь и у
                   нашего выпуска Харьковского ВВАУЛ 1974 года есть свой сайт. Заходите, регистрируйтесь, смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы,
@@ -43,8 +41,7 @@
                   однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать как можно больше информации о всех
                   выпускниках ХВВАУЛ, сделать информацию полезной и интересной. Дорогие друзья! Теперь и у нашего выпуска Харьковского ВВАУЛ 1974 года есть свой сайт. Заходите,
                   регистрируйтесь, смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же, фотографии – то есть
-                  всё то, чем вы хотите поделиться со
-                   своими однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать
+                  всё то, чем вы хотите поделиться со своими однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать
                   как можно больше информации о всех выпускниках ХВВАУЛ, сделать информацию полезной и интересной. Дорогие друзья! Теперь и у нашего выпуска Харьковского ВВАУЛ 1974
                   года есть свой сайт. Заходите, регистрируйтесь, смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и,
                   конечно же, фотографии – то есть всё то, чем вы хотите поделиться со своими однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими
@@ -56,9 +53,7 @@
                   мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же, фотографии – то есть всё то, чем вы хотите поделиться со своими
                   однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать как можно больше информации о всех
                   выпускниках ХВВАУЛ, сделать информацию полезной и интересной. Дорогие друзья! Теперь и у нашего выпуска Харьковского ВВАУЛ 1974 года есть свой сайт. Заходите,
-                  регистрируйтесь, смотрите материалы,
-
-                  присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же, фотографии – то есть
+                  регистрируйтесь, смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и, конечно же, фотографии – то есть
                   всё то, чем вы хотите поделиться со своими однокашниками. Именно это сделает наш сайт красивым и, возможно, посещаемым другими пользователями. Цель сайта: собрать
                   как можно больше информации о всех выпускниках ХВВАУЛ, сделать информацию полезной и интересной. Дорогие друзья! Теперь и у нашего выпуска Харьковского ВВАУЛ 1974
                   года есть свой сайт. Заходите, регистрируйтесь, смотрите материалы, присылайте свои мысли, воспоминания, стихи, рассказы, пожелания, замечания , восхищения и,
@@ -73,9 +68,15 @@
             </article>
           </div>
         </section>
+
+        <button class="up">
+          <svg class="up__icon">
+            <use xlink:href="images/sprite.svg#up"></use>
+          </svg>
+        </button>
       </main>
       @@include('templates/components/_footer.html')
     </div>
-    <script src="js/main.min.js"></script>
+    <script src="js/product.min.js"></script>
   </body>
 </html>
