--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,4 +13,5 @@
 @import "components/news";
 @import "pages/product";
 @import "pages/author";
+@import "components/modal";
 @import "components/footer";
