--- a/src/templates/components/_header.html
+++ b/src/templates/components/_header.html
@@ -2,7 +2,7 @@
   <div class="header-top">
     <div class="container">
       <div class="header-top__inner">
-        <img src="images/star.png" alt="Орден" class="star" style="width: 50px; height: 50px;" />
+        <img src="images/star.png" alt="Орден" class="star" style="width: 50px; height: 50px" />
 
         <p class="header-top__content">
           [ХВВАУЛ-74] Харьковское Высшее Военное Авиационное ордена Красной Звезды Училище Лётчиков ВВС им. дважды Героя Советского Союза С.И. Грицевца
@@ -25,21 +25,27 @@
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__item">
-              <a href="index.html#slide" class="menu__link">Наш курс</a>
+              <a href="./index.html#slide" class="menu__link">Наш курс</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Исторические хроники</a>
+              <a href="./history.html" class="menu__link">Исторические хроники</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Творчество</a>
+              <a href="./art.html" class="menu__link">Творчество</a>
             </li>
             <li class="menu__item">
               <a href="./author.html" class="menu__link">Юрий Фёдоров</a>
             </li>
             <li class="menu__item">
-              <a href="#" class="menu__link">Помощь</a>
+              <a href="#" class="menu__link" data-modal="data-modal">Помощь</a>
             </li>
           </ul>
+
+          <button class="menu__btn">
+            <svg class="menu__icon">
+              <use xlink:href="images/sprite.svg#menu"></use>
+            </svg>
+          </button>
         </nav>
       </div>
     </div>
