--- a/src/templates/pages/index.html
+++ b/src/templates/pages/index.html
@@ -330,6 +330,7 @@
         </div>
       </main>
 
+      @@include('templates/components/_modal.html')
       @@include('templates/components/_footer.html')
     </div>
     <script src="js/main.min.js"></script>
