--- a/src/templates/pages/product.html
+++ b/src/templates/pages/product.html
@@ -75,6 +75,7 @@
           </svg>
         </button>
       </main>
+      @@include('templates/components/_modal.html')
       @@include('templates/components/_footer.html')
     </div>
     <script src="js/product.min.js"></script>
