--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -36,7 +36,7 @@ body {
   max-width: 1330px;
 }
 
-.title{
+.title {
   position: relative;
   margin-bottom: 20px;
   text-align: center;
@@ -46,11 +46,20 @@ body {
 h1 {
   font-size: 36px;
   margin-bottom: -10px;
+  @include mq("1024") {
+    font-size: 32px;
+  }
+  @include mq("768") {
+    font-size: 28px;
+  }
 }
 
 h2 {
   font-size: 24px;
   line-height: 29px;
+  @include mq("768") {
+    font-size: 22px;
+  }
 }
 
 h1,
@@ -88,9 +97,9 @@ span {
 }
 
 .up__icon {
-    border-radius: 50%;
-    max-width: 40px;
-    max-height: 40px;
-    fill: #000;
-    background-color: #e5f4f3;
+  border-radius: 50%;
+  max-width: 40px;
+  max-height: 40px;
+  fill: #000;
+  background-color: #e5f4f3;
 }
