--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -10,6 +10,10 @@
     grid-gap: 30px;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    @include mq("768") {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__item {
@@ -27,6 +31,9 @@
       padding: 20px;
       max-width: 100%;
       max-height: 100%;
+      @include mq("1024") {
+        grid-column: 1/5;
+      }
     }
 
     &:first-child .content__img-container {
@@ -41,13 +48,15 @@
     &:first-child .content__img {
       width: 100%;
       height: 360px;
+      @include mq("1024") {
+        height: 100%;
+      }
     }
 
     &:first-child .content__text {
-      display: block;
       margin-bottom: 26px;
       font-size: 16px;
-      @include txt($lc: 4);
+
     }
 
     &:hover {
@@ -71,11 +80,18 @@
     height: 170px;
     margin-bottom: 12px;
     object-fit: cover;
+    @include mq("1024") {
+      width: 100vw;
+      height: 100%;
+    }
   }
 
   &__title {
     font-size: 18px;
     @include txt($lc: 2);
+    @include mq("1024") {
+      font-size: 16px;
+    }
   }
 
   &__text {
