--- a/src/scss/components/_news.scss
+++ b/src/scss/components/_news.scss
@@ -1,7 +1,7 @@
 .news {
   border: 4px solid $accent;
   border-bottom: 0px;
-  padding: 25px 25px 55px 25px;
+  padding: 25px 25px 105px 25px;
   border-radius: 12px 12px 0 0;
   background-color: #fff;
 
@@ -19,6 +19,9 @@
     border-radius: 6px;
     background-image: $bg;
     transition: transform 0.4s, box-shadow 0.4s !important;
+    @include mq("768") {
+      flex-direction: column;
+    }
 
     &:hover {
       box-shadow: 0 5px 20px 5px rgba(0, 0, 0, 0.4);
@@ -31,6 +34,9 @@
     max-width: 40%;
     max-height: 100%;
     object-fit: cover;
+    @include mq("768") {
+      min-width: 100%;
+    }
   }
 
   &__link {
