--- a/src/templates/pages/author.html
+++ b/src/templates/pages/author.html
@@ -677,6 +677,7 @@
           </svg>
         </button>
       </main>
+      @@include('templates/components/_modal.html')
       @@include('templates/components/_footer.html')
     </div>
     <script src="js/product.min.js"></script>
